# brahma

./: .gitignore  CMakeLists.txt  README.md  compose-dev.yaml
CMake/: brahma-config-version.cmake.in  brahma-config.cmake.build.in  brahma-config.cmake.install.in
dependency/: Dockerfile  spack.yaml
include/brahma/: brahma.h  enumeration.h  interceptor.h  mpi.h  singleton.h
include/brahma/interface/: interface.h  interface_utility.h  mpiio.h  posix.h  stdio.h
src/brahma/: brahma.cpp  interceptor.cpp  interceptor.h  mpi.cpp  posix.h  singleton.h  stdio.h
src/brahma/interface/: interface.cpp  interface_utility.cpp  mpiio.cpp  posix.cpp  stdio.cpp  stdio.h
test/: CMakeLists.txt  test.cpp
